Update and rename Untitled1.ipynb to chatbot1.0.ipynb

--- a/chatbot1.0.ipynb
+++ b/chatbot1.0.ipynb
@@ -95,7 +95,7 @@
     "def get_response(messages):\n",
     "    response = Generation.call(\n",
     "        # 若没有配置环境变量，请用百炼API Key将下行替换为：api_key=\"sk-xxx\",\n",
-    "        api_key=\"sk-9355a718d0f547fb88fb9d930f2bf33b\", \n",
+    "        api_key=\"", \n",
     "        model=\"qwen2.5-3b-instruct\",\n",
     "        messages=messages,\n",
     "        result_format=\"message\",\n",
