--- a/chatbot2.0.ipynb
+++ b/chatbot2.0.ipynb
@@ -44,7 +44,7 @@
     "class ChatbotWithMemory:\n",
     "    def __init__(self):\n",
     "        # 初始化LLM\n",
-    "        self.llm = Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"sk-9355a718d0f547fb88fb9d930f2bf33b\")\n",
+    "        self.llm = Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"\")\n",
     "\n",
     "        # 初始化Prompt\n",
     "        self.prompt = ChatPromptTemplate(\n",
