Update and rename Untitled1.ipynb to chatbot1.0.ipynb

--- a/chatbot1.0.ipynb
+++ b/chatbot1.0.ipynb
@@ -12,12 +12,12 @@
     "\n",
     "# 定义一个命令行聊天机器人的类\n",
     "class CommandlineChatbot:\n",
-    "    # 在初始化时，设置花卉行家的角色并初始化聊天模型\n",
+    "    # 在初始化时，设置教育培训老师的角色并初始化聊天模型\n",
     "    def __init__(self):\n",
-    "        self.chat =Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"sk-9355a718d0f547fb88fb9d930f2bf33b\")\n",
+    "        self.chat =Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"\")\n",
     "        self.messages = [ {\n",
     "        \"role\": \"system\",\n",
-    "        \"content\": \"你是一个花卉行家。\"\n",
+    "        \"content\": \"你是一个教育培训老师。\"\n",
     "    }]\n",
     "\n",
     "    # 定义一个循环来持续与用户交互\n",
