Update and rename Untitled4.ipynb to chatbot3.0.ipynb

--- a/chatbot3.0.ipynb
+++ b/chatbot3.0.ipynb
@@ -45,12 +45,12 @@
     "        # 向量数据库\n",
     "        self.vectorstore = Qdrant.from_documents(\n",
     "            documents=all_splits, # 以分块的文档\n",
-    "            embedding=DashScopeEmbeddings(model=\"text-embedding-v1\", dashscope_api_key=\"sk-9355a718d0f547fb88fb9d930f2bf33b\"), # 用DashScopeEmbeddings的Embedding Model做嵌入\n",
+    "            embedding=DashScopeEmbeddings(model=\"text-embedding-v1\", dashscope_api_key=\"\"), # 用DashScopeEmbeddings的Embedding Model做嵌入\n",
     "            location=\":memory:\",  # in-memory 存储\n",
     "            collection_name=\"my_documents\",) # 指定collection_name\n",
     " \n",
     "        # 初始化LLM\n",
-    "        self.llm = Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"sk-9355a718d0f547fb88fb9d930f2bf33b\")\n",
+    "        self.llm = Tongyi(model_name=\"qwen-2.5-3B-Instruct\", api_key=\"\")\n",
     " \n",
     "        # 初始化Memory\n",
     "        self.memory = ConversationSummaryMemory(\n",
